@@ -1,3 +1,11 @@
+Fri Dec 14 14:41:43 2001  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
+
+	* src/plot2d.c (eval_plots): Yet another fix for linestyle
+ 	handling.  Plots with no "lt" or "lw" option at all would not get
+ 	their linewidth, pointsize and other options set up properly.
+
+	* src/plot3d.c (eval_3dplots): Dito.
+
 2001-12-13  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
 	* src/plot2d.c (eval_plots): Re-do handling of possible
